test/error/StForeachInt.fu
public static class Test
{
	public static bool Run()
	{
		int n = 5;
		foreach (int i in n) { //ERROR: 'foreach' invalid on 'int'
		}
		return true;
	}
}
